fix: the logo was too big at higher zoom levels in browser

--- a/src/styles/Media_Partners.module.scss
+++ b/src/styles/Media_Partners.module.scss
@@ -59,9 +59,9 @@
       width: auto;
       height: clamp(40px, 4vw, 170px);
       object-fit: contain;
-      @media screen and (max-height: 700px) {
-        height: 100px;
-      }
+      // @media screen and (max-height: 700px) {
+      //   height: 100px;
+      // }
     }
   }
 }
